manual coding